fix compilation warnings